# chatlib

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: docs.yml
chatlib/: __init__.py  common.py  context.py  convo.py  db.py  llm.py  models.py  tools.py  utils.py  vectors.py
docs/: Makefile
docs/source/: conf.py  index.rst  readme.rst
docs/source/api/: modules.rst
docs/source/api/chatlib/: common.rst  context.rst  convo.rst  llm.rst  models.rst  tools.rst  vectors.rst
tests/: conftest.py  test_actors.py  test_chatlib.py
